<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.webforj.samples</groupId>
  <artifactId>webforj-samples</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>war</packaging>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <webforj.version>25.01</webforj.version>
    <warFileName>${project.artifactId}-${project.version}</warFileName>
    <jetty.version>12.0.14</jetty.version>
    <!--
      Configures automatic reload of Jetty server
      (with 1 second timeout) when new classes are compiled.
      Should be disabled when using a live reload system, such as JRebel.
      -->
    <jetty.scan>1</jetty.scan>
    <jetty.port>8080</jetty.port>
    <jetty.stopPort>9966</jetty.stopPort>

  </properties>
  <repositories>
    <repository>
      <id>snapshots-repo</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
      </snapshots>
    </repository>
  </repositories>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.webforj</groupId>
        <artifactId>webforj-bom</artifactId>
        <version>${webforj.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.3</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>com.webforj</groupId>
      <artifactId>webforj</artifactId>
      <version>${webforj.version}</version>
    </dependency>
    <dependency>
      <groupId>com.webforj</groupId>
      <artifactId>webforj-engine</artifactId>
      <version>${webforj.version}</version>
    </dependency>
    <dependency>
      <groupId>com.webforj</groupId>
      <artifactId>webforj-googlecharts</artifactId>
    </dependency>
    <dependency>
      <groupId>com.webforj</groupId>
      <artifactId>webforj-terminal</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.16</version>
    </dependency>
    <dependency>
      <groupId>com.microsoft.playwright</groupId>
      <artifactId>playwright</artifactId>
      <version>1.49.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.tuckey</groupId>
      <artifactId>urlrewritefilter</artifactId>
      <version>5.1.3</version>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>6.0.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.18.0</version>
    </dependency>
  </dependencies>
  <build>
    <finalName>${warFileName}</finalName>
    <plugins>
      <plugin>
        <groupId>com.github.eirslett</groupId>
        <artifactId>frontend-maven-plugin</artifactId>
        <version>1.15.1</version>
        <executions>
          <execution>
            <id>install node and npm</id>
            <goals>
              <goal>install-node-and-npm</goal>
            </goals>
            <phase>generate-resources</phase>
          </execution>
          <execution>
            <id>npm install</id>
            <goals>
              <goal>npm</goal>
            </goals>
            <phase>generate-resources</phase>
          </execution>
          <execution>
            <id>npm run build</id>
            <goals>
              <goal>npm</goal>
            </goals>
            <phase>generate-resources</phase>
            <configuration>
              <arguments>run build</arguments>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <nodeVersion>v23.5.0</nodeVersion>
          <npmVersion>10.9.2</npmVersion>
          <workingDirectory>docs</workingDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>copy static docs</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
              <resources>
                <resource>
                  <directory>docs/build</directory>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <webResources>
            <resource>
              <filtering>true</filtering>
              <directory>src/main/webapp</directory>
              <includes>
                <include>**/web.xml</include>
              </includes>
            </resource>
          </webResources>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.jetty.ee10</groupId>
        <artifactId>jetty-ee10-maven-plugin</artifactId>
        <version>${jetty.version}</version>
        <configuration>
          <scan>${jetty.scan}</scan>
          <stopPort>${jetty.stopPort}</stopPort>
          <stopKey>${project.artifactId}</stopKey>
          <httpConnector>
            <port>${jetty.port}</port>
          </httpConnector>
          <webApp>
            <contextPath>/</contextPath>
          </webApp>
        </configuration>
        <executions>
          <execution>
            <id>start-jetty</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>start</goal>
            </goals>
          </execution>
          <execution>
            <id>stop-jetty</id>
            <phase>post-integration-test</phase>
            <goals>
              <goal>stop</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- Runs the integration tests (*IT) after the server is started -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>3.0.0-M7</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.8.0</version>
        <executions>
          <execution>
            <id>copy-javadoc-jars</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>com.webforj</groupId>
                  <artifactId>webforj-foundation</artifactId>
                  <version>${webforj.version}</version>
                  <classifier>javadoc</classifier>
                  <type>jar</type>
                  <outputDirectory>${project.build.directory}/javadocs</outputDirectory>
                  <destFileName>webforj-foundation-javadoc.jar</destFileName>
                </artifactItem>
                <artifactItem>
                  <groupId>com.webforj</groupId>
                  <artifactId>webforj-data</artifactId>
                  <version>${webforj.version}</version>
                  <classifier>javadoc</classifier>
                  <type>jar</type>
                  <outputDirectory>${project.build.directory}/javadocs</outputDirectory>
                  <destFileName>webforj-data-javadoc.jar</destFileName>
                </artifactItem>
                <artifactItem>
                  <groupId>com.webforj</groupId>
                  <artifactId>webforj-components</artifactId>
                  <version>${webforj.version}</version>
                  <classifier>javadoc</classifier>
                  <type>jar</type>
                  <outputDirectory>${project.build.directory}/javadocs</outputDirectory>
                  <destFileName>webforj-components-javadoc.jar</destFileName>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>copy-webforj-config</id>
            <phase>process-resources</phase>
            <configuration>
              <target>
                <copy file="src/main/resources/${config.file}"
                  tofile="${project.build.outputDirectory}/webforj.conf" />
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
          <execution>
            <id>extract-javadocs</id>
            <phase>prepare-package</phase>
            <configuration>
              <target>
                <mkdir dir="${project.build.directory}/javadocs-extracted" />
                <unzip src="${project.build.directory}/javadocs/webforj-foundation-javadoc.jar" 
                       dest="${project.build.directory}/javadocs-extracted/foundation" />
                <unzip src="${project.build.directory}/javadocs/webforj-data-javadoc.jar" 
                       dest="${project.build.directory}/javadocs-extracted/data" />
                <unzip src="${project.build.directory}/javadocs/webforj-components-javadoc.jar" 
                       dest="${project.build.directory}/javadocs-extracted/components" />
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>prod</id>
      <activation>
      </activation>
      <properties>
        <config.file>webforj-prod.conf</config.file>
      </properties>
    </profile>
    <profile>
      <id>dev</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <config.file>webforj-dev.conf</config.file>
      </properties>
    </profile>
  </profiles>
</project>
